[package]
name = "exist"
version = "0.1.2"
authors = ["Craig Macomber <CraigM@CraigM.info>"]
edition = "2018"

description = "Self describing persistence library"
documentation = "https://docs.rs/crate/exist"
homepage = "https://github.com/Craig-Macomber/exist"
repository = "https://github.com/Craig-Macomber/exist"
readme = "README.md"
keywords = ["persistence", "serialization"]
categories = ["encoding"]
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0.1"
serde_cbor = "0.9.0"
blake2 = "0.8.0"
byteorder = {version = "1.2.7", features = ["i128"]}
